@@ -11,6 +11,7 @@ o Added the :chdir control command to change the local directory
 o Added the :hide_password control command, to use with su(1) for example
 o Added the :reset_prompt control command, for use when launching a shell
 o Added the :replicate control command to do some file transfer between shells
+o Added the :export_rank control command to uniquely identify each shell
 o Common SSH key problems are detected and some help is printed
 o New completion from the local filesystem
 
